# berry

./: .gitignore  .goreleaser.yml  LICENSE  README.md  berry.spec  pyproject.toml
.github/workflows/: ci.yml  release-check.yml  release-macos.yml  release-windows.yml  slsa-provenance.yml
docs/: CLI.md  CONFIGURATION.md  MCP.md  PACKAGING.md  ROADMAP.md  USAGE.md
docs/workflows/: GENERATE_BOILERPLATE_VERIFICATION.md  GREENFIELD_PROTOTYPE_VERIFICATION.md  INLINE_COMPLETION_VERIFICATION.md  PLAN_AND_EXECUTE_VERIFICATION.md  README.md  REFACTOR_AND_BUGFIX_VERIFICATION.md  SEARCH_AND_LEARN_VERIFICATION.md
scripts/: build_macos_pkg.sh  pyinstaller_entry.py  render_homebrew_cask.py  sign_blob_with_cosign.sh  validate_macos_pkg.sh  verify_blob_with_cosign.sh
scripts/apple_certs/: developer_id_ca_g2.pem
scripts/macos_pkg_scripts/: postinstall
src/berry/: __init__.py  __main__.py  audit.py  auth_flow.py  cli.py  clients.py  config.py  enforcement.py  integration.py  mcp_env.py  mcp_server.py  paths.py  permissions.py  prompts.py  recipes.py  support.py  verify.py
src/berry/hallucination_detector/: __init__.py  core.py  k8s_wrapper.py  stage_ab.py  trace_budget.py
src/berry/hallucination_detector/backends/: __init__.py  base.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_cli_deeplink.py  test_cli_init.py  test_k8s_wrapper_e2e.py  test_mcp_server.py  test_mcp_web_exec.py
tests/unit/: test_audit.py  test_clients.py  test_integration.py  test_k8s_wrapper.py  test_mcp_k8s_tools.py  test_permissions.py  test_recipes.py  test_release_workflows.py  test_support.py
